# homeassistant_rainsensor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/rainsensor/: __init__.py  config_flow.py  manifest.json  sensor.py
custom_components/rainsensor/translations/: en.json
scripts/: check_versions.py
tests/: conftest.py  test_config_flow.py  test_init.py  test_sensor.py
